Project Link fix

--- a/Pages/projects.html
+++ b/Pages/projects.html
@@ -82,7 +82,7 @@
                     <img src="../Content/graphic2.jpg" alt="Project 1">
                     <div class="overlay">
                         <h3>Youtube Thumnail</h3>
-                        <a href="./Pages/thumbnail1.html">View Project</a>
+                        <a href="../Pages/thumbnail1.html">View Project</a>
                     </div>
                 </div>
     
@@ -105,14 +105,14 @@
                     <img src="../Content/graphic1.jpg" alt="Project 4">
                     <div class="overlay">
                         <h3>Graphics</h3>
-                        <a href="./Pages/thumbnail2.html" >View Project</a>
+                        <a href="../Pages/thumbnail2.html" >View Project</a>
                     </div>
                 </div>
                 <div class="project-item" data-category="branding">
                     <img src="../Content/video_production.jpg" alt="Project 5">
                     <div class="overlay">
                         <h3>Viral Reels</h3>
-                        <a href="./Pages/Video2.html">View Project</a>
+                        <a href="../Pages/Video2.html">View Project</a>
                     </div>
                 </div>
                 <div class="project-item" data-category="books">
