--- a/Pages/contact_us.html
+++ b/Pages/contact_us.html
@@ -74,7 +74,7 @@
                                     </div>
                                     <div class="mb-3">
                                         <label for="message" class="form-label">Message</label>
-                                        <textarea class="form-control" id="message" rows="5" required></textarea>
+                                        <textarea class="form-control" id="message" rows="5" style="resize:none" required></textarea>
                                     </div>
                                     <div class="d-grid">
                                         <button type="submit" class="btn btn-primary">Submit</button>
