--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <!-- Navbar -->
 
-    <nav class="navbar navbar-expand-lg navbar-black bg-black sticky-top">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
         <div class="container">
             <!-- Logo on the left side -->
             <a class="navbar-brand" href="#">
@@ -87,7 +87,7 @@
                 <div class="overlay"></div>
                 <h1>Join Us Today</h1>
                 <p>Become a part of our growing community and experience success together.</p>
-                <a href="./Pages/contact_us.html" class="btn">Join</a>
+                <a href="./Pages/contact_us.html" class="btn">Join Us</a>
             </div>
         </div>
         <!-- Left and Right controls -->
@@ -176,7 +176,7 @@
                         <i class="fas fa-chart-line"></i>
                         <h3>Graphic Design</h3>
                         <p>Crafting compelling visuals, from remarkable graphics to stunning photos. </p>
-                        <a class="btn btn-primary" href="./Pages/visual_graphic_creation.html">Read More</a>
+                        <a class="btn btn-light" href="./Pages/visual_graphic_creation.html">Read More</a>
                     </div>
                 </div>
                 <div class="col-md-4">
@@ -184,7 +184,7 @@
                         <i class="fas fa-code"></i>
                         <h3>Video Production</h3>
                         <p> Creating engaging video content for any platform.</p>
-                        <a class="btn btn-primary" href="./Pages/Video_Prodection.html">Read More</a>
+                        <a class="btn btn-light" href="./Pages/Video_Prodection.html">Read More</a>
                     </div>
                 </div>
                 <div class="col-md-4">
@@ -192,7 +192,7 @@
                         <i class="fas fa-bullhorn"></i>
                         <h3>Website Development</h3>
                         <p>Our experienced developers create custom website tailored to your needs..</p>
-                        <a class="btn btn-primary" href="./Pages/web_development.html">Read More</a>
+                        <a class="btn btn-light" href="./Pages/web_development.html">Read More</a>
                     </div>
                 </div>
             </div>
@@ -235,7 +235,6 @@
                     <a href="./Pages/thumbnail1.html">View Project</a>
                 </div>
             </div>
-
             <div class="project-item image-container" data-category="branding">
                 <img src="./Content/Video1.jpg" alt="Project 2">
                 <div class="overlay">
@@ -243,7 +242,6 @@
                     <a href="./Pages/Video1.html">View Project</a>
                 </div>
             </div>
-
             <div class="project-item" data-category="books">
                 <img src="./Content/web_development.jpg" alt="Project 3">
                 <div class="overlay">
@@ -261,8 +259,51 @@
             <div class="project-item" data-category="branding">
                 <img src="./Content/video_production.jpg" alt="Project 5">
                 <div class="overlay">
-                    <h3>Viral Reels</h3>
+                    <h3>Video Edit</h3>
                     <a href="./Pages/Video2.html">View Project</a>
+                </div>
+            </div>
+            <div class="project-item" data-category="branding">
+                <img src="./Content/video3.jpg" alt="Project 7">
+                <div class="overlay">
+                    <h3>Video Edit</h3>
+                    <a href="https://drive.google.com/file/d/1AdzvuXjZM2Ja6KF2B0ZdfsT8_dZNjLQA/view?usp=sharing">View Project</a>
+                </div>
+            </div>
+            <div class="project-item" data-category="branding">
+                <img src="./Content/video4.jpg" alt="Project 8">
+                <div class="overlay">
+                    <h3>Video Edit</h3>
+                    <a href="https://drive.google.com/file/d/1AXPGRaN4Yg-5_NoUht4ND9HzxoqfSJWZ/view?usp=sharing">View Project</a>
+                </div>
+            </div>
+            <div class="project-item" data-category="branding">
+                <img src="./Content/video8.jpg" alt="Project 9">
+                <div class="overlay">
+                    <h3>Video Edit</h3>
+                    <a href="https://drive.google.com/file/d/1ASIaavdTjWoY2zsctUN_hJle2Jog6Bk0/view?usp=sharing">View Project</a>
+                </div>
+            </div>
+            <div class="project-item" data-category="branding">
+                <img src="./Content/video6.jpg" alt="Project 10">
+                <div class="overlay">
+                    <h3>Editing Work</h3>
+                    <a href="https://youtu.be/jmJ2Yienee0?si=r7J3mEOCKXiNgTwT">View Project</a>
+                </div>
+            </div>
+            <div class="project-item" data-category="branding">
+                <img src="./Content/video5.jpg" alt="Project 11">
+                <div class="overlay">
+                    <h3>Viral Reels</h3>
+                    <a href="./Pages/Video3.html">View Project</a>
+                </div>
+            </div>
+            <div class="project-item" data-category="branding">
+                <img src="./Content/video7.jpg" alt="Project 12">
+                <div class="overlay">
+                    <h3>Video Edit</h3>
+                    <a href="https://youtu.be/79niUAEYMS8?si=98ymwq9AhHlctexR
+                    ">View Project</a>
                 </div>
             </div>
             <div class="project-item" data-category="books">
