--- a/Pages/contact_us.html
+++ b/Pages/contact_us.html
@@ -12,7 +12,7 @@
 <body>
     <!-- Navbar -->
      
-    <nav class="navbar navbar-expand-lg navbar-black bg-black sticky-top">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
         <div class="container" >
             <!-- Logo on the left side -->
             <a class="navbar-brand" href="#">
