--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <!-- Navbar -->
 
-    <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-black sticky-top">
         <div class="container">
             <!-- Logo on the left side -->
             <a class="navbar-brand" href="#">
@@ -73,7 +73,7 @@
                 <div class="overlay"></div>
                 <h1>Welcome to Our Website</h1>
                 <p>Discover our innovative services and solutions designed just for you.</p>
-                <a href="./Pages/about_us.html" class="btn">Read More</a>
+                <a href="./Pages/about_us.html" class="btn btn-light">Read More</a>
             </div>
             <!-- Slide 2 -->
             <div class="carousel-item" style="background-image: url('./Content/image2.jpg');">
@@ -232,85 +232,70 @@
                 <img src="./Content/graphic2.jpg" alt="Project 1">
                 <div class="overlay">
                     <h3>Youtube Thumnail</h3>
-                    <a href="./Pages/thumbnail1.html">View Project</a>
+                    <a href="https://drive.google.com/file/d/1U_syqmulcvI8xbxEXofzCpcBp4Q2keYA/view?usp=drive_link" target="_blank">View Project</a>
                 </div>
             </div>
             <div class="project-item image-container" data-category="branding">
                 <img src="./Content/Video1.jpg" alt="Project 2">
                 <div class="overlay">
-                    <h3>Video Edit</h3>
-                    <a href="./Pages/Video1.html">View Project</a>
+                    <h3>Knowledge Video</h3>
+                    <a href="https://drive.google.com/file/d/1K7oe_b2ukoHZazWAwj9daEDl6S9DdLAJ/view?usp=drive_link" target="_blank">View Project</a>
                 </div>
             </div>
             <div class="project-item" data-category="books">
                 <img src="./Content/web_development.jpg" alt="Project 3">
                 <div class="overlay">
                     <h3>Web Development</h3>
-                    <a href="https://atccoinfra.in/">View Project</a>
+                    <a href="https://atccoinfra.in/" target="_blank">View Project</a>
                 </div>
             </div>
             <div class="project-item" data-category="app">
                 <img src="./Content/graphic1.jpg" alt="Project 4">
                 <div class="overlay">
                     <h3>Graphics</h3>
-                    <a href="./Pages/thumbnail2.html">View Project</a>
+                    <a href="https://drive.google.com/file/d/1mvQw8ITcZynpDrdLS3EeD94AckH4p9GI/view?usp=drive_link" target="_blank">View Project</a>
                 </div>
             </div>
             <div class="project-item" data-category="branding">
                 <img src="./Content/video_production.jpg" alt="Project 5">
                 <div class="overlay">
-                    <h3>Video Edit</h3>
-                    <a href="./Pages/Video2.html">View Project</a>
+                    <h3>Business Influencer</h3>
+                    <a href="https://drive.google.com/file/d/1gV3l6044Ju1LNRLhiI0mR7QWuBY1AfgJ/view?usp=drive_link" target="_blank">View Project</a>
                 </div>
             </div>
             <div class="project-item" data-category="branding">
                 <img src="./Content/video3.jpg" alt="Project 7">
                 <div class="overlay">
-                    <h3>Video Edit</h3>
-                    <a href="https://drive.google.com/file/d/1AdzvuXjZM2Ja6KF2B0ZdfsT8_dZNjLQA/view?usp=sharing">View Project</a>
+                    <h3>Real State Influencer</h3>
+                    <a href="https://drive.google.com/file/d/154456sneJ6SuTkt1s-D-6fRfXjwnICST/view?usp=drive_link" target="_blank">View Project</a>
                 </div>
             </div>
             <div class="project-item" data-category="branding">
                 <img src="./Content/video4.jpg" alt="Project 8">
                 <div class="overlay">
-                    <h3>Video Edit</h3>
-                    <a href="https://drive.google.com/file/d/1AXPGRaN4Yg-5_NoUht4ND9HzxoqfSJWZ/view?usp=sharing">View Project</a>
-                </div>
-            </div>
-            <div class="project-item" data-category="branding">
-                <img src="./Content/video8.jpg" alt="Project 9">
-                <div class="overlay">
-                    <h3>Video Edit</h3>
-                    <a href="https://drive.google.com/file/d/1ASIaavdTjWoY2zsctUN_hJle2Jog6Bk0/view?usp=sharing">View Project</a>
+                    <h3>Promotional Videor</h3>
+                    <a href="https://drive.google.com/file/d/1c9yIJ8yplW_gvYb32Pfo9SfSOfnSUWtk/view?usp=drive_link" target="_blank">View Project</a>
                 </div>
             </div>
             <div class="project-item" data-category="branding">
                 <img src="./Content/video6.jpg" alt="Project 10">
                 <div class="overlay">
                     <h3>Editing Work</h3>
-                    <a href="https://youtu.be/jmJ2Yienee0?si=r7J3mEOCKXiNgTwT">View Project</a>
+                    <a href="https://drive.google.com/file/d/1by7Sno6yvvPyiRofT4VSqPRenCAQWOQl/view?usp=drive_link" target="_blank">View Project</a>
                 </div>
             </div>
             <div class="project-item" data-category="branding">
                 <img src="./Content/video5.jpg" alt="Project 11">
                 <div class="overlay">
-                    <h3>Viral Reels</h3>
-                    <a href="./Pages/Video3.html">View Project</a>
-                </div>
-            </div>
-            <div class="project-item" data-category="branding">
-                <img src="./Content/video7.jpg" alt="Project 12">
-                <div class="overlay">
-                    <h3>Video Edit</h3>
-                    <a href="https://youtu.be/79niUAEYMS8?si=98ymwq9AhHlctexR
-                    ">View Project</a>
+                    <h3>Lifestyle Tour</h3>
+                    <a href="https://drive.google.com/file/d/16UCY3QsdmoLtI4dk0FA3GM0kG-b0D2Cv/view?usp=drive_link" target="_blank">View Project</a>
                 </div>
             </div>
             <div class="project-item" data-category="books">
                 <img src="./Content/Website1.jpg" alt="Project 6">
                 <div class="overlay">
                     <h3>Website Design</h3>
-                    <a href="https://abhiboostin.framer.website/">View Project</a>
+                    <a href="https://abhiboostin.framer.website/" target="_blank">View Project</a>
                 </div>
             </div>
         </div>
@@ -343,7 +328,7 @@
                                 <textarea name="message" class="form-control" id="message" rows="5" style="resize:none" required></textarea>
                             </div>
                             <div class="d-grid">
-                                <button type="submit" class="btn btn-primary">Submit</button>
+                                <button type="submit" class="btn btn-light">Submit</button>
                             </div>
                         </form>
                     </div>
@@ -373,7 +358,7 @@
                 </div>
                 <div class="footer-section">
                     <h4>Contact</h4>
-                    <p>Email: 101ritiksinha@gmail.com<br>Phone: (123) 456-7890</p>
+                    <p>Email: farhanbaig8520@gmail.com<br>Phone: (123) 456-7890</p>
                 </div>
                 <div class="footer-section">
                     <h4>Follow Us</h4>
