--- a/Pages/contact_us.html
+++ b/Pages/contact_us.html
@@ -12,7 +12,7 @@
 <body>
     <!-- Navbar -->
      
-    <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-black sticky-top">
         <div class="container" >
             <!-- Logo on the left side -->
             <a class="navbar-brand" href="#">
@@ -106,7 +106,7 @@
                         </div>
                         <div class="footer-section">
                             <h4>Contact</h4>
-                            <p>Email: 101ritiksinha@gmail.com<br>Phone: (123) 456-7890</p>
+                            <p>Email: farhanbaig8520@gmail.com<br>Phone: (123) 456-7890</p>
                         </div>
                         <div class="footer-section">
                             <h4>Follow Us</h4>
